# osf-integrity-plugin

./: .env.example  .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/superpowers/plans/: 2026-05-01-osf-assistant-v2.md  2026-05-01-osf-assistant.md
docs/superpowers/specs/: 2026-05-01-osf-assistant-design.md  2026-05-01-osf-assistant-v2-design.md
osf_assistant/: server.py
osf_assistant/templates/: aspredicted.json  osf_standard.json
osf_assistant/tools/: bias.py  evidence.py  power.py  preregistration.py
skills/: check-bias.md  find-evidence.md  power-analysis.md  preregister.md
tests/: test_bias.py  test_evidence.py  test_power.py  test_preregistration.py
